Fix up new Use of Funds on Mobile DE banners
- Remove unused infographic component
- Tweak styles to make full width work better
- Make sure modalOpened and modalClosed only fire once per modal
- Add UoF tests, and separate mobile and desktop

Ticket: https://phabricator.wikimedia.org/T381956

--- a/src/components/UseOfFunds2024/styles/UseOfFunds.scss
+++ b/src/components/UseOfFunds2024/styles/UseOfFunds.scss
@@ -9,6 +9,7 @@
 		padding: map.get( units.$spacing, 'small' );
 		line-height: 1.8;
 		font-size: 16px;
+		max-width: 100vw;
 
 		@include breakpoints.desktop-up {
 			padding: map.get( units.$spacing, 'large' );
@@ -146,8 +147,11 @@
 			padding: map.get( units.$spacing, 'small' );
 
 			@include breakpoints.tablet-up {
-				margin: 0 ( -( map.get( units.$spacing, 'large' ) ) ) map.get( units.$spacing, 'large' );
 				padding: map.get( units.$spacing, 'large' );
+			}
+
+			@include breakpoints.desktop-up {
+				margin: 0 ( -( map.get( units.$spacing, 'large' ) ) ) map.get( units.$spacing, 'large' );
 			}
 
 			h2 {
